# rust-may-minihttp

./: Cargo.toml
src/: lib.rs  main.rs  routes.rs
src/features/auth/: handler.rs  model.rs
src/utils/: mod.rs  parsejson.rs
tests/: test.rs
