[package]
name = "may_mini"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }

may_minihttp = "0.1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.3.1" }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.72"
httpc-test = "0.1.1"